added new routes to index and checkout

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -13,6 +13,11 @@
         <div>Get Pizza</div>
     </a>
 
+    <a href="myorders" class="nav-tab" >
+        <img src="img/bike.svg" />
+        <div>My orders</div>
+    </a>
+
 </div>
 
 <div class="main">
