--- a/Pages/Checkout.razor
+++ b/Pages/Checkout.razor
@@ -8,9 +8,14 @@
         <img src="img/logo.svg" />
     </a>
 
-    <a href="" class="nav-tab">
+    <a href="" class="nav-tab active" >
         <img src="img/pizza-slice.svg" />
         <div>Get Pizza</div>
+    </a>
+
+    <a href="myorders" class="nav-tab" >
+        <img src="img/bike.svg" />
+        <div>My orders</div>
     </a>
 
 </div>
