--- a/Pages/Checkout.razor
+++ b/Pages/Checkout.razor
@@ -58,6 +58,6 @@ async Task PlaceOrder()
     var response = await HttpClient.PostAsJsonAsync(NavigationManager.BaseUri + "orders", OrderState.Order);
     var newOrderId= await response.Content.ReadFromJsonAsync<int>();
     OrderState.ResetOrder();
-    NavigationManager.NavigateTo("/");
+    NavigationManager.NavigateTo("/myorders");
 }
 }
